correct spacing correct html syntax

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -12,6 +12,7 @@
   .cover__subtitle {
     font-size: 16px;
     line-height: 1.18;
+    max-width: 250px;
   }
 }
 
@@ -19,5 +20,6 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.14;
+    max-width: 220px;
   }
 }
