--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,6 +11,6 @@
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    line-height: 1.45;
+    font-size: 16px;
   }
 }
